# StereoSplatViewer

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/services/: mlsharp.py  mode360.py  storage.py
docs/: THIRD_PARTY_NOTICES.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  app.css  main.tsx  ply_meta.ts  types.ts
frontend/src/viewer/: PLYViewer.tsx  SuperSplatViewer.tsx
scripts/: dev.sh  dev_tmux.sh  ml_sharp_wrapper.sh  setup_wsl.sh
