[project]
name = "stereosplatviewer-backend"
version = "0.0.1"
description = "FastAPI backend scaffold for StereoSplatViewer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "plyfile>=0.9",
    "piexif>=1.1.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
